# hackathon-2023-summer

projects/48-SuperPetGame/src/SuperPetChain/pallets/pet/src/: lib.rs
projects/48-SuperPetGame/src/SuperPetGame/: Cargo.toml  README.md  metadata.scale
projects/48-SuperPetGame/src/SuperPetGame/src/: game.rs  main.rs  menu.rs  splash.rs
