[package]
name = "SuperPetGame-RST"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Game engine
bevy = { version = "0.10.0", features = ["dynamic_linking"] }

# Client
subxt = "0.29.0"
tokio = {version = "1.29.0", features = ["rt-multi-thread"]}
sp-keyring = "24.0.0"
futures = { version = "0.3.27", default-features = false, features = ["std"] }
thiserror = "1.0.40"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
